--- a/src/themes/accelerator/components/ArticleList.astro
+++ b/src/themes/accelerator/components/ArticleList.astro
@@ -34,9 +34,9 @@ const articles = posts.map(p => {
 ---
 <ul class="post-list">
   {articles.map((post) => (
-  <li class="list-item" data-destination={ addSlashToAddress(post.url) }>
+  <li class="list-item" data-destination={ addSlashToAddress(post.url) } data-image={ (post.frontmatter.bannerImage?.src.length > 0).toString() }>
     <article>
-      <div class="list-item-image" data-image={ (post.frontmatter.bannerImage?.src.length > 0).toString() }>
+      <div class="list-item-image">
       {post.img && (
         <img
           srcset={ post.img.srcset }
