--- a/src/themes/accelerator/components/Authors.astro
+++ b/src/themes/accelerator/components/Authors.astro
@@ -12,8 +12,9 @@ import { addSlashToAddress } from '@util/Url.astro';
 type Props = {
   lang: string;
   frontmatter: Frontmatter;
+  addLink: boolean;
 };
-const { lang, frontmatter } = Astro.props as Props;
+const { lang, frontmatter, addLink } = Astro.props as Props;
 
 // Language
 const _ = Lang(lang);
@@ -28,8 +29,11 @@ const authorList = await getAuthorList(frontmatter);
   }
   <div class="author-info">
     <span>{ _(t.post.written_by) }
-      {authorList.writers.map((writer) => (
+      {addLink == true && authorList.writers.map((writer) => (
         <a href={ addSlashToAddress(writer.url) }>{ writer.frontmatter.title }</a>
+      ))}
+      {addLink == false && authorList.writers.map((writer) => (
+        <span>{ writer.frontmatter.title }</span>
       ))}
       <time class="dt-published" datetime={ frontmatter.pubDate.toString() } itemprop="datePublished">
       { formatDate(frontmatter, lang, SITE) }
