--- a/src/themes/accelerator/components/Authors.astro
+++ b/src/themes/accelerator/components/Authors.astro
@@ -30,7 +30,7 @@ const authorList = await getAuthorList(frontmatter);
   <div class="author-info">
     <span>{ _(t.post.written_by) }
       {addLink == true && authorList.writers.map((writer) => (
-        <a href={ addSlashToAddress(writer.url) }>{ writer.frontmatter.title }</a>
+        <a href={ addSlashToAddress(writer.url) + '1/' }>{ writer.frontmatter.title }</a>
       ))}
       {addLink == false && authorList.writers.map((writer) => (
         <span>{ writer.frontmatter.title }</span>
