Code block support

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -702,6 +702,26 @@ pre.astro-code code {
     background-color: unset;
 }
 
+.copy-container {
+    max-height: 0px;
+    margin: 0;
+    width: 100%;
+    text-align: right;
+}
+
+.copy-button {
+    border-radius: 0.2rem;
+    stroke: var(--aft);
+    fill: var(--fore-link-alt);
+    background-color: transparent;
+}
+
+.copy-button:hover,
+.copy-button:focus {
+    fill: var(--fore-link);
+    transform: rotate(4deg);
+}
+
 /* Custom Divisions */
 
 .note {
@@ -734,6 +754,7 @@ pre.astro-code code {
         transition: all 200ms ease-in-out;
     }
 
+    .copy-button,
     .post-list .list-item, main img, main blockquote, main .note {
         transition: all 0.2s ease-in;
         scale: calc(0.75 + (var(--shown, 1) * 0.25));
