--- a/public/css/main.css
+++ b/public/css/main.css
@@ -774,9 +774,14 @@ pre.astro-code code {
     }
 
     .copy-button,
-    .anim-show-parent img,
-    .anim-show-parent > * {
+    .anim-show-parent > *,
+    .anim-show-parent img {
         transition: all 0.2s ease-in;
         scale: calc(0.75 + (var(--shown, 1) * 0.25));
     }
+
+    /* .anim-show-parent img {
+        transition: all 0.2s ease-in;
+        scale: calc(0.75 + (var(--imgshown, 1) * 0.25));
+    } */
 }
