--- a/public/css/main.css
+++ b/public/css/main.css
@@ -558,7 +558,7 @@ form.site-search button {
 
 @media (max-width: 680px) {
     /* This is deliberately 680, not 860 */
-    .post-list .list-item > article {
+    .post-list .list-item[data-image='true'] > article {
         display: unset;
         grid-template-columns: unset;
     }
@@ -777,11 +777,12 @@ pre.astro-code code {
     .anim-show-parent > *,
     .anim-show-parent img {
         transition: all 0.2s ease-in;
-        scale: calc(0.75 + (var(--shown, 1) * 0.25));
+        scale: calc(0.80 + (var(--shown, 1) * 0.20));
+
     }
 
-    /* .anim-show-parent img {
+    .anim-show-parent img {
         transition: all 0.2s ease-in;
         scale: calc(0.75 + (var(--imgshown, 1) * 0.25));
-    } */
+    }
 }
