--- a/public/css/main.css
+++ b/public/css/main.css
@@ -815,6 +815,38 @@ pre.astro-code code {
     transform: rotate(4deg);
 }
 
+
+.magnify-container {
+    max-height: 0px;
+    margin: 0;
+    width: 100%;
+    text-align: right;
+    z-index: 1;
+    position: relative;
+    top: -1rem;
+}
+
+.magnify-icon {
+    border-radius: 0.2rem;
+    stroke: var(--fore-link-alt);
+    fill: var(--aft);
+    background-color: transparent;
+    opacity: 0;
+}
+
+figure:hover .magnify-icon,
+figure:focus .magnify-icon {
+    opacity: 1;
+}
+
+.magnify-icon:hover,
+.magnify-icon:focus,
+.magnify-icon:focus-within {
+    stroke: var(--fore-link);
+    transform: rotate(4deg);
+    opacity: 1;
+}
+
 /* Custom Divisions */
 
 .note {
@@ -847,6 +879,7 @@ pre.astro-code code {
         transition: all 200ms ease-in-out;
     }
 
+    .magnify-icon,
     .copy-button,
     .anim-show-parent > *,
     .anim-show-parent img {
